crates/peach_markdown_stream/src/snapshots/peach_markdown_stream__table__tests__three_columns.snap
---
source: crates/peach_markdown_stream/src/table.rs
expression: "render(vec![vec![\"A\", \"B\", \"C\"], vec![\"1\", \"2\", \"3\"], vec![\"x\", \"y\", \"z\"],])"
---
  ┌───┬───┬───┐
  │ A │ B │ C │
  ├───┼───┼───┤
  │ 1 │ 2 │ 3 │
  ├───┼───┼───┤
  │ x │ y │ z │
  └───┴───┴───┘
