crates/peach_markdown_stream/src/snapshots/peach_markdown_stream__table__tests__uneven_row_lengths.snap
---
source: crates/peach_markdown_stream/src/table.rs
expression: "render(vec![vec![\"A\", \"B\", \"C\"], vec![\"1\", \"2\"], vec![\"x\"],])"
---
  ┌───┬───┬───┐
  │ A │ B │ C │
  ├───┼───┼───┤
  │ 1 │ 2 │   │
  ├───┼───┼───┤
  │ x │   │   │
  └───┴───┴───┘
